adjusted alt-text content

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
         <br /><a href="#">Click here to Learn More</a>
       </section>
       <h1>Favorite Artist: Dax</h1>
-      <img src="/assets/dax.jpg" alt="photo of Dax" width="200" height="200" />
+      <img
+        src="/assets/dax.jpg"
+        alt="photo of Dax with staged background"
+        width="200"
+        height="200"
+      />
       <section id="About Dax">
         <h2>About Dax</h2>
         <article>
