Changed path to image to fit Github Pages needs

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </section>
       <h1>Favorite Artist: Dax</h1>
       <img
-        src="/assets/dax.jpg"
+        src="assets/dax.jpg"
         alt="photo of Dax with staged background"
         width="200"
         height="200"
