--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <title>Favorite Artist</title>
     <meta name="description" content="website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
   </head>
   <body>
     <header>
@@ -89,35 +88,35 @@
           </p>
           <h3>Singles</h3>
           <ol>
-            <li><p>Self Proclaimed</p></li>
+            <li>Self Proclaimed</li>
 
-            <li><p>Snapchat</p></li>
+            <li>Snapchat</li>
 
-            <li><p>I Want</p></li>
+            <li>I Want</li>
 
-            <li><p>Plan B</p></li>
+            <li>Plan B</li>
 
-            <li><p>Don't Wanna Die Today</p></li>
+            <li>Don't Wanna Die Today</li>
 
-            <li><p>YourWorthIt.org</p></li>
+            <li>YourWorthIt.org</li>
 
-            <li><p>No Respect</p></li>
+            <li>No Respect</li>
 
-            <li><p>She Cheated Again</p></li>
+            <li>She Cheated Again</li>
 
-            <li><p>Dear Black Santa</p></li>
+            <li>Dear Black Santa</li>
 
-            <li><p>You Should've Known</p></li>
+            <li>You Should've Known</li>
 
-            <li><p>Self Proclaimed 2</p></li>
+            <li>Self Proclaimed 2</li>
 
-            <li><p>My Last Words</p></li>
+            <li>My Last Words</li>
 
-            <li><p>No Cappin</p></li>
+            <li>No Cappin</li>
 
-            <li><p>All Night Long</p></li>
+            <li>All Night Long</li>
 
-            <li><p>Did It First</p></li>
+            <li>Did It First</li>
           </ol>
           <section id="bottom-of-page">
             <aside>
