--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             ability. Leveraging popular music app "SoundCloud" as a way to
             broadcast his music, he began turning his poetry into songs. His
             initial rise to fame can be attributed to the official music video
-            produced for his song 'Cash Me Outside', featuring Danielle Bregoli.
-            Later, Dax would release his first extended play, 'It's Different
-            Now', in August 2018, which was supported by guests such as OT
-            Genasis and Futuristic.
+            produced for his song 'Catch Me Outside', featuring Danielle
+            Bregoli. Later, Dax would release his first extended play, 'It's
+            Different Now', in August 2018, which was supported by guests such
+            as OT Genasis and Futuristic.
           </p>
         </article>
       </section>
