adjusted footer grouping, updated meta description, eliminated aside tag, and moved title tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 1.	Create a single webpage about your favorite artist. Please keep all of the content professional and appropriate for the academic setting. To receive full-credit, please utilize the following on your website:
-    1.	A single h1 tag
-    2.	Subsequent headings use h2 tags (Use h3-h6 as subheadings when necessary)
+    1.	A single h1 tag (CHECK)
+    2.	Subsequent headings use h2 tags (Use h3-h6 as subheadings when necessary) (h2 & h3 used)
     3.	Use the header, main, and footer tags to organize content.
     4.	Use section tags to divide the page into sections as necessary (discography, about, etc.)
     5.	At least one image.
@@ -22,9 +22,12 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Favorite Artist</title>
-    <meta name="description" content="website" />
+    <meta
+      name="description"
+      content="Welcome to my website! Check out my favorite rap artist, DAX!"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Favorite Artist</title>
   </head>
   <body>
     <header>
@@ -118,16 +121,14 @@
 
             <li>Did It First</li>
           </ol>
-          <section id="bottom-of-page">
-            <aside>
-              <a href="#About Dax">About Dax</a>
-              <a href="#Discography">Discography</a>
-              <a href="#top-of-page">Back To Top</a>
-            </aside>
-          </section>
         </article>
       </section>
     </main>
-    <footer>&copy; Jacob Snyder-Sohl</footer>
+    <footer id="bottom-of-page">
+      <a href="#About Dax">About Dax</a>
+      <a href="#Discography">Discography</a>
+      <a href="#top-of-page">Back To Top</a>
+      <br />&copy; Jacob Snyder-Sohl
+    </footer>
   </body>
 </html>
