fixed href ID and section ID

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <section id="top-of-page">
         <a href="#">Site Name</a>
         <nav>
-          <br /><a href="#About Dax">About Dax</a>
-          <a href="#Discography">Discography</a>
+          <br /><a href="#about-dax">About Dax</a>
+          <a href="#discography">Discography</a>
           <a href="#bottom-of-page">Bottom of Page</a>
         </nav>
       </section>
@@ -51,7 +51,7 @@
         width="200"
         height="200"
       />
-      <section id="About Dax">
+      <section id="about-dax">
         <h2>About Dax</h2>
         <article>
           <p>
@@ -78,7 +78,7 @@
           </p>
         </article>
       </section>
-      <section id="Discography">
+      <section id="discography">
         <article>
           <h2>Discography</h2>
           <h3>Albums, EPs, Mixtapes</h3>
@@ -125,8 +125,8 @@
       </section>
     </main>
     <footer id="bottom-of-page">
-      <a href="#About Dax">About Dax</a>
-      <a href="#Discography">Discography</a>
+      <a href="#about-dax">About Dax</a>
+      <a href="#discography">Discography</a>
       <a href="#top-of-page">Back To Top</a>
       <br />&copy; Jacob Snyder-Sohl
     </footer>
